@@ -4,7 +4,4 @@ this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="//field[@name='products']" position="replace">
     </xpath>
-    <xpath expr="/tree/field[@name='name']" position="before">
-        <field name="code" expand="1"/>
-    </xpath>
 </data>
