@@ -3,6 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="name" expand="2"/>
+    <field name="code" expand="1"/>
     <field name="list_price"/>
     <field name="cost_price"/>
     <field name="type"/>
