@@ -1,3 +1,4 @@
+* Add code to template as variant prefix code
 * Hide product fields inherited from template when empty
 * Skip default products when template is created from product
 * Search also on variant name when searching on template record name
